fixed the nasty bug with my DB

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_USERS_USERNAME=root
-MYSQL_USERS_PASSWORD=1234
-MYSQL_USERS_HOST=127.0.0.1:3306
-MYSQL_USERS_SCHEMA=users_db
+mysql_users_username=root
+mysql_users_password=1234
+mysql_users_host=127.0.0.1:3306
+mysql_users_schema=users_db
